@@ -330,7 +330,7 @@ In the config file, following parameters are available
 * server.http.io-idle-timeout (maximum allowed idle time of reading HTTP request and writing HTTP response in seconds. default: 300)
 * server.http.enable-http2 (enable HTTP/2. default: false)
 * server.http.headers.KEY = VALUE (HTTP header to set on API responses)
-* server.jmx.port (port to listen JMX in integer. default: JMX is disabled)
+* server.jmx.port (port to listen JMX in integer. default: JMX is disabled) Since Java 9, to use this option, you need to set '-Djdk.attach.allowAttachSelf=true' to command line option of java or to JDK_JAVA_OPTIONS environment variable.
 * database.type (enum, "h2" or "postgresql")
 * database.user (string)
 * database.password (string)
